Fixed styling of buttons in modals. Fixed spacing of nav buttons in bookCategoryTemplate in mobile. Fixed Spacing of question mark icon. Added Ellipses when author names get too long. Removed Amazon icon. Made links of modal headers. All Items on the checklist are complete

--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -444,8 +444,13 @@ footer a:hover {
 .book-author {
 	font-style: normal !important;
 	color: #8c8c8c;
-	word-break: break-word;
-	
+}
+
+.truncate {
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .book h3 {
@@ -573,7 +578,7 @@ footer a:hover {
     .book-recommendations-template button {
     	display: block;
     	width: 100%;
-    	margin-bottom: 5px;
+    	margin: 0;
     }
     .footer a {
     	display: block;
